--- a/src/pages/Homepage/Introduction/Introduction.module.scss
+++ b/src/pages/Homepage/Introduction/Introduction.module.scss
@@ -2,8 +2,11 @@
 
 .Introduction {
   width: 100%;
-  height: 100vh;
-  margin-top: 3rem;
+  min-height: 100vh;
+  padding-top: 5rem; // Account for fixed header
+  display: flex;
+  align-items: center;
+
   &-container {
     padding-block: 3rem;
     margin: 0 auto;
@@ -14,6 +17,7 @@
     justify-content: center;
     gap: 3rem;
     align-items: center;
+
     h1 {
       width: 100%;
       font-family: "Poppins SemiBold";
@@ -22,6 +26,7 @@
       line-height: 95px;
       position: relative;
       margin-bottom: -1rem;
+
       span {
         position: absolute;
         top: 45%;
@@ -33,6 +38,7 @@
       }
     }
   }
+
   &-left {
     width: 46%;
     display: flex;
@@ -40,6 +46,7 @@
     justify-content: center;
     align-items: flex-start;
     gap: 3rem;
+
     &-top {
       position: relative;
       width: 100%;
@@ -49,6 +56,7 @@
       align-items: flex-start;
       margin-left: 2rem;
       gap: 1rem;
+
       p {
         padding-block: 0.5rem;
         width: 60%;
@@ -57,10 +65,12 @@
         color: $gray;
         line-height: 1.62;
       }
+
       &-button {
         width: 30%;
         background-color: $secondary-color;
         padding: 0.25rem 0.8rem;
+
         p {
           font-family: "Poppins Medium";
           font-size: 14px;
@@ -69,6 +79,7 @@
         }
       }
     }
+
     &-bottom {
       width: 100%;
       height: 100%;
@@ -77,11 +88,25 @@
       flex-direction: row;
       position: relative;
       gap: 1rem;
+
+      &--visible {
+        .Introduction-left-bottom-content {
+          opacity: 1;
+          transform: translateX(0);
+        }
+
+        .Introduction-left-bottom-content2 {
+          opacity: 1;
+          transform: translateX(0);
+        }
+      }
+
       &-decorate {
         position: absolute;
         bottom: 0;
         left: 0;
       }
+
       &-content {
         padding: 1rem;
         border-radius: 10px;
@@ -91,16 +116,22 @@
         flex-direction: column;
         justify-content: space-between;
         align-items: flex-start;
+        opacity: 0;
+        transform: translateX(-100%);
+        transition: all 0.8s ease-out;
+
         h2 {
           font-family: "Poppins SemiBold";
           font-size: 14px;
           color: $black;
           line-height: 1.7;
+
           span {
             color: $primary-color;
           }
         }
       }
+
       &-content2 {
         padding: 1rem;
         border-radius: 13px;
@@ -108,6 +139,9 @@
         background-color: #efefef;
         position: relative;
         overflow: hidden;
+        opacity: 0;
+        transform: translateX(100%);
+        transition: all 0.8s ease-out 0.2s;
 
         &::after {
           content: "";
@@ -120,27 +154,32 @@
           border-top-right-radius: 20px;
           z-index: 1;
         }
+
         &-image {
           display: flex;
           flex-direction: column;
           justify-content: space-between;
           align-items: flex-start;
           position: relative;
+
           &-decorate {
             position: absolute;
             bottom: 0;
             right: 0;
           }
+
           &-decorate2 {
             position: absolute;
             bottom: 0;
             right: 0;
           }
+
           img {
             width: 60%;
             border-radius: 10px;
             object-fit: cover;
           }
+
           p {
             margin-top: 1rem;
             width: 65%;
@@ -153,6 +192,7 @@
       }
     }
   }
+
   &-image-decorate2 {
     display: flex;
     justify-content: center;
@@ -166,6 +206,7 @@
     right: 0;
     z-index: 10;
   }
+
   &-number {
     width: 100%;
     display: flex;
@@ -173,40 +214,289 @@
     gap: 0;
     justify-content: flex-end;
     align-items: flex-end;
+
     p {
       font-family: "Poppins SemiBold";
       font-size: 32px;
       color: $primary-color;
     }
+
     span {
       font-family: "Poppins Light";
       font-size: 10px;
       color: $primary-color;
     }
   }
+
   &-decorate2 {
     position: absolute;
     top: 60%;
     right: 10%;
   }
+
   &-right {
     width: 50%;
     display: flex;
     justify-content: right;
     align-items: center;
     position: relative;
+
     &-decorate {
-      width: 88%;
+      width: 100%;
+
       svg {
         width: 100%;
         height: 100%;
       }
     }
+
     &-image {
       position: absolute;
       bottom: -15%;
       right: 0;
       width: 90%;
+    }
+  }
+}
+
+// Tablet styles (768px - 1024px)
+@media (max-width: 1024px) {
+  .Introduction {
+    padding-top: 4.5rem;
+
+    &-container {
+      width: 90%;
+      padding: 0 1rem;
+      gap: 2rem;
+    }
+
+    &-left {
+      width: 50%;
+      gap: 2rem;
+
+      &-top {
+        margin-left: 1rem;
+
+        h1 {
+          font-size: 3.5rem;
+          line-height: 80px;
+        }
+
+        p {
+          width: 70%;
+          font-size: 12px;
+        }
+
+        &-button {
+          width: 35%;
+        }
+      }
+
+      &-bottom {
+        padding-left: 4rem;
+        gap: 0.8rem;
+
+        &-content {
+          width: 45%;
+        }
+
+        &-content2 {
+          width: 85%;
+        }
+      }
+    }
+
+    &-right {
+      width: 45%;
+
+      &-decorate {
+        width: 90%;
+      }
+
+      &-image {
+        width: 85%;
+      }
+    }
+  }
+}
+
+// Mobile styles (up to 767px)
+@media (max-width: 767px) {
+  .Introduction {
+    padding-top: 4rem;
+    min-height: auto;
+
+    &-container {
+      width: 95%;
+      padding: 0 0.5rem;
+      flex-direction: column-reverse;
+      gap: 1.5rem;
+      padding-block: 2rem;
+    }
+
+    &-left {
+      width: 100%;
+      gap: 2rem;
+
+      &-top {
+        margin-left: 0;
+
+        h1 {
+          font-size: 2.5rem;
+          line-height: 1.3;
+          margin-bottom: 0;
+
+          span {
+            right: -10%;
+            svg {
+              width: 60%;
+            }
+          }
+        }
+
+        p {
+          width: 90%;
+          font-size: 14px;
+        }
+
+        &-button {
+          width: 40%;
+
+          p {
+            font-size: 13px;
+          }
+        }
+      }
+
+      &-bottom {
+        padding-left: 0;
+        flex-direction: column;
+        gap: 1rem;
+
+        &-content {
+          width: 100%;
+        }
+
+        &-content2 {
+          width: 100%;
+
+          &-image {
+            img {
+              width: 80%;
+            }
+
+            p {
+              width: 80%;
+              font-size: 13px;
+            }
+          }
+        }
+      }
+    }
+
+    &-right {
+      width: 100%;
+      justify-content: center;
+
+      &-decorate {
+        width: 100%;
+      }
+
+      &-image {
+        position: relative;
+        bottom: 0;
+        right: 0;
+        width: 80%;
+      }
+    }
+
+    &-decorate2 {
+      top: 50%;
+      right: -15%;
+
+      svg {
+        width: 50%;
+      }
+    }
+  }
+}
+
+// Small mobile styles (up to 480px)
+@media (max-width: 480px) {
+  .Introduction {
+    padding-top: 3.5rem;
+
+    &-container {
+      width: 100%;
+      padding: 0 1rem;
+      gap: 1rem;
+      padding-block: 1.5rem;
+    }
+
+    &-left {
+      gap: 3rem;
+      &-top {
+        align-items: center;
+        h1 {
+          text-align: center;
+          font-size: 2.5rem;
+          line-height: 1.6;
+
+          span {
+            left: 3%;
+            svg {
+              width: 35%;
+            }
+          }
+        }
+
+        p {
+          margin: 0 auto;
+          width: 88%;
+          font-size: 12px;
+          text-align: center;
+        }
+
+        &-button {
+          width: 100%;
+
+          p {
+            font-size: 12px;
+          }
+        }
+      }
+
+      &-bottom {
+        &-decorate {
+          display: none;
+        }
+        &-content2 {
+          &-image {
+            img {
+              width: 60%;
+            }
+
+            p {
+              width: 86%;
+              font-size: 12px;
+              line-height: 1.9;
+            }
+          }
+        }
+      }
+    }
+
+    &-right {
+      &-image {
+        width: 90%;
+      }
+      &-decorate {
+        display: none;
+      }
+    }
+
+    &-decorate2 {
+      display: none;
     }
   }
 }
