--- a/src/pages/Homepage/Shopping/Shopping.module.scss
+++ b/src/pages/Homepage/Shopping/Shopping.module.scss
@@ -88,6 +88,7 @@
         gap: 0.5rem;
         align-items: center;
         justify-content: flex-end;
+
         &-item {
           width: 36px;
           aspect-ratio: 1/1;
@@ -98,6 +99,7 @@
           align-items: center;
           justify-content: center;
           cursor: pointer;
+
           &.active {
             background-color: $secondary-color;
             svg {
@@ -149,7 +151,7 @@
       gap: 1rem;
     }
   }
-  &-mobile-filter {
+  &-mobile-filter-icon {
     display: none;
   }
 }
