--- a/src/components/Product/ProductItem.module.scss
+++ b/src/components/Product/ProductItem.module.scss
@@ -122,16 +122,19 @@
     justify-content: space-between;
     align-items: center;
     &-book {
-      display: flex;
-      flex-direction: row;
-      gap: 0.5rem;
-      align-items: center;
+      // display: flex;
+      // flex-direction: row;
+      // gap: 0.5rem;
+      // align-items: center;
+      position: relative;
+
       svg {
         width: 1rem;
         height: 1rem;
         stroke: $gray;
       }
       span {
+        margin-left: 0.5rem;
         font-family: "Poppins Regular";
         font-size: 11px;
         color: $gray;
