--- a/src/components/Product/ProductItem.module.scss
+++ b/src/components/Product/ProductItem.module.scss
@@ -41,23 +41,6 @@
     border-radius: 3rem;
     box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
 
-    // Add a subtle gradient overlay
-    &::before {
-      content: "";
-      position: absolute;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      background: linear-gradient(
-        135deg,
-        rgba(255, 255, 255, 0.1) 0%,
-        rgba(255, 255, 255, 0.05) 100%
-      );
-      border-radius: 3rem;
-      pointer-events: none;
-    }
-
     p {
       position: relative;
       z-index: 1;
@@ -115,6 +98,14 @@
     font-family: "Poppins SemiBold";
     font-size: 15px;
     color: $black;
+    //just 1 line
+
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    word-break: break-word;
   }
   &-Subtitle {
     display: flex;
@@ -122,24 +113,29 @@
     justify-content: space-between;
     align-items: center;
     &-book {
-      // display: flex;
-      // flex-direction: row;
-      // gap: 0.5rem;
-      // align-items: center;
-      position: relative;
+      display: flex;
+      flex-wrap: wrap;
+      row-gap: 0 !important;
+      gap: 0.5rem;
+      align-items: center;
+      overflow: hidden;
 
       svg {
+        flex-shrink: 0;
         width: 1rem;
         height: 1rem;
         stroke: $gray;
       }
-      span {
-        margin-left: 0.5rem;
+
+      p {
+        white-space: normal;
         font-family: "Poppins Regular";
         font-size: 11px;
         color: $gray;
+        word-break: break-word;
       }
     }
+
     &-document {
       font-family: "Poppins Regular";
       font-size: 12px;
