--- a/src/components/SimilarProduct/SimilarProduct.module.scss
+++ b/src/components/SimilarProduct/SimilarProduct.module.scss
@@ -19,6 +19,7 @@
   }
   &-list {
     width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: row;
     gap: 1rem;
@@ -29,6 +30,7 @@
     scrollbar-width: none;
     -ms-overflow-style: none;
     padding-bottom: 0.5rem;
+    align-items: stretch;
     align-items: stretch;
 
     &::-webkit-scrollbar {
