--- a/src/components/Filter/Filter.module.scss
+++ b/src/components/Filter/Filter.module.scss
@@ -34,36 +34,48 @@
   }
   &-price {
     display: flex;
-    flex-direction: row;
-    gap: 1rem;
-    &-min,
-    &-max {
-      width: 50%;
+    flex-direction: column;
+    gap: 0.75rem;
+    &-input {
       display: flex;
-      flex-direction: column;
+      flex-direction: row;
       gap: 0.5rem;
-      p {
-        font-family: "Poppins SemiBold";
-        font-size: 11px;
+      input {
+        width: 50%;
+      }
+    }
+    p {
+      font-family: "Poppins SemiBold";
+      font-size: 12px;
+      color: #828282;
+    }
+  }
+  &-input {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    gap: 0.5rem;
+    p {
+      font-family: "Poppins SemiBold";
+      font-size: 11px;
+      color: $gray;
+    }
+
+    input {
+      width: 100%;
+      border: 0.25px solid $gray;
+      border-radius: 0.5rem;
+      padding: 0.75rem;
+      font-size: 11px;
+      font-family: "Poppins Regular";
+      color: $gray;
+      ::placeholder {
+        font-family: "Poppins Light";
+        font-size: 12px;
         color: $gray;
       }
-
-      input {
-        width: 100%;
-        border: 0.25px solid $gray;
-        border-radius: 0.5rem;
-        padding: 0.75rem;
-        font-size: 12px;
-        font-family: "Poppins Regular";
-        color: $gray;
-        ::placeholder {
-          font-family: "Poppins Light";
-          font-size: 12px;
-          color: $gray;
-        }
-        &:focus {
-          outline: none;
-        }
+      &:focus {
+        outline: none;
       }
     }
   }
