--- a/src/components/RecommendedProducts/RecommendedProducts.module.scss
+++ b/src/components/RecommendedProducts/RecommendedProducts.module.scss
@@ -129,7 +129,7 @@
       }
 
       p {
-        font-family: "Poppins Ligh";
+        font-family: "Poppins Light";
         font-size: 11px;
         color: $gray;
       }
@@ -152,7 +152,7 @@
       padding: 0.75rem 1.5rem;
       p {
         font-family: "Poppins Medium";
-        font-size: 11px;
+        font-size: 14px;
         color: $white;
       }
       &:hover {
@@ -268,6 +268,10 @@
         padding: 2rem 1rem;
         img {
           aspect-ratio: 2/1;
+        }
+        h3 {
+          width: 70%;
+          line-height: 1.62;
         }
       }
     }
