--- a/src/pages/Homepage/Introduction/Introduction.module.scss
+++ b/src/pages/Homepage/Introduction/Introduction.module.scss
@@ -68,11 +68,12 @@
       }
 
       &-button {
-        width: 30%;
+        width: 40%;
         background-color: $secondary-color;
         padding: 0.25rem 0.8rem;
 
         p {
+          text-align: center;
           font-family: "Poppins Medium";
           font-size: 14px;
           color: $white;
