--- a/src/pages/Homepage/Shopping/Shopping.module.scss
+++ b/src/pages/Homepage/Shopping/Shopping.module.scss
@@ -52,6 +52,7 @@
     flex-direction: column;
     gap: 0.75rem;
     &-header {
+      margin-top: 0.25rem;
       width: 100%;
       display: flex;
       flex-direction: row;
